--- a/assets/scss/components/_latset-news.scss
+++ b/assets/scss/components/_latset-news.scss
@@ -159,37 +159,37 @@
         }
       }
     }
-    .owl-item {
-      opacity: 0;
-      transition: opacity 500ms;
-    }
-    .owl-item.active {
-      opacity: 1;
-    }
-    .owl-dots {
-      text-align: center;
-      .owl-dot.active {
-        width: 38px;
-        background-color: #0000fe;
-      }
-      .owl-dot {
-        width: 28px;
-        height: 5px;
-        margin: 0px 5px;
-        cursor: pointer;
-        border-radius: 30%;
-        display: inline-block;
-        background-color: #ececed;
-        transition: 0.3s all ease-in-out;
-        &:focus {
-          outline: none;
-        }
-      }
-    }
+    // .owl-item {
+    //   opacity: 0;
+    //   transition: opacity 500ms;
+    // }
+    // .owl-item.active {
+    //   opacity: 1;
+    // }
+    // .owl-dots {
+    //   text-align: center;
+    //   .owl-dot.active {
+    //     width: 38px;
+    //     background-color: #0000fe;
+    //   }
+    //   .owl-dot {
+    //     width: 28px;
+    //     height: 5px;
+    //     margin: 0px 5px;
+    //     cursor: pointer;
+    //     border-radius: 30%;
+    //     display: inline-block;
+    //     background-color: #ececed;
+    //     transition: 0.3s all ease-in-out;
+    //     &:focus {
+    //       outline: none;
+    //     }
+    //   }
+    // }
   }
-  .owl-carousel {
-    .owl-stage-outer {
-      overflow: visible;
-    }
-  }
+  // .owl-carousel {
+  //   .owl-stage-outer {
+  //     overflow: visible;
+  //   }
+  // }
 }
