--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,3 +11,5 @@
 @import "components/registration";
 @import "components/testimonials";
 @import "components/latset-news";
+@import "components/subscribe-form";
+@import "components/footer";
