--- a/assets/scss/_tools.scss
+++ b/assets/scss/_tools.scss
@@ -86,6 +86,10 @@
   }
 }
 
+.pl-40 {
+  padding-left: 40px;
+}
+
 @media only screen and(max-width:560px) {
   .section-title {
     .background-title {
