--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,3 +1,185 @@
 #footer {
   background-image: url("/assets/img/submit\ banner.jpg");
+  padding-top: 80px;
+  color: white;
+  .footer-content {
+    padding-bottom: 85px;
+    border-bottom: 2px solid #383737;
+    line-height: 1.625;
+    p {
+      margin-bottom: 0;
+    }
+    .footer-logo {
+      padding-bottom: 18px;
+      img {
+        max-width: 100%;
+      }
+    }
+    .footer-text {
+      color: #9d9d9d;
+      padding-bottom: 35px;
+    }
+    .btn-usual {
+      height: 35px;
+      width: 100px;
+      font-size: 14px;
+      line-height: 35px;
+      transition: 0.3s all ease-in-out;
+      &:hover {
+        color: black;
+        transition: 0.3s all ease-in-out;
+      }
+      &::after {
+        background-color: white;
+      }
+    }
+    .footer-title {
+      color: #fff;
+      font-size: 24px;
+      font-weight: 700;
+      position: relative;
+      margin-bottom: 25px;
+      &::after {
+        left: 0;
+        height: 3px;
+        width: 30px;
+        content: "";
+        bottom: -12px;
+        position: absolute;
+        background-color: $color-orange;
+      }
+    }
+    form {
+      margin-top: 30px;
+      position: relative;
+      input {
+        height: 45px;
+        width: 100%;
+        padding-left: 20px;
+        border: 2px solid #313131;
+        background-color: transparent;
+        &::placeholder {
+          color: white;
+          font-size: 14px;
+        }
+      }
+      button {
+        background-color: $color-orange;
+        top: 0;
+        right: 0;
+        width: 60px;
+        padding: 0;
+        color: #fff;
+        height: 45px;
+        border: none;
+        position: absolute;
+        transition: 0.3s all ease-in-out;
+
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+    .contact {
+      padding-top: 17px;
+      padding-bottom: 10px;
+      li {
+        margin-bottom: 10px;
+        i {
+          float: left;
+          font-size: 14px;
+          color: $color-orange;
+          margin-right: 10px;
+          margin-top: 5px;
+        }
+        a {
+          color: #9d9d9d;
+          display: block;
+          font-size: 14px;
+          overflow: hidden;
+          max-width: 170px;
+        }
+      }
+    }
+    .open-hours {
+      span {
+        color: #fff;
+        font-size: 14px;
+        display: block;
+        margin-bottom: 10px;
+        font-weight: 700;
+        text-decoration: underline;
+      }
+      p {
+        font-size: 14px;
+        color: #9d9d9d;
+        max-width: 180px;
+      }
+    }
+  }
+
+  .social-links {
+    display: flex;
+    margin-top: 22px;
+    li {
+      margin-right: 15px;
+      a {
+        color: #494949;
+        transition: 0.3s all ease-in-out;
+        &:hover {
+          color: $color-orange;
+        }
+      }
+    }
+  }
+  .instagram {
+    li {
+      width: 75px;
+      margin-bottom: 7px;
+      position: relative;
+      height: 75px;
+      margin-right: 10px;
+      background-color: #000;
+      float: left;
+      transition: 0.3s all ease-in-out;
+      a {
+        img {
+          height: auto;
+          max-width: 100%;
+        }
+        i {
+          opacity: 0;
+          left: 0;
+          top: 50%;
+          right: 0;
+          opacity: 0;
+          color: #fff;
+          position: absolute;
+          text-align: center;
+          transform: translateY(-50%);
+          transition: 0.3s all ease-in-out;
+        }
+      }
+      &::before {
+        content: "";
+        top: 0;
+        opacity: 0;
+        height: 100%;
+        position: absolute;
+        background-color: #000;
+        width: 100%;
+        transition: 0.3s all ease-in-out;
+      }
+      &:hover {
+        &::before {
+          opacity: 0.7;
+        }
+        a {
+          i {
+            opacity: 0.7;
+          }
+        }
+      }
+    }
+  }
 }
