--- a/assets/scss/components/_latset-news.scss
+++ b/assets/scss/components/_latset-news.scss
@@ -2,6 +2,7 @@
   padding-top: 110px;
   background-color: $bg-gray;
   overflow: hidden;
+  padding-bottom: 40px;
   .section-title {
     .background-title {
       color: white;
