--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -116,70 +116,101 @@
         max-width: 180px;
       }
     }
-  }
-
-  .social-links {
-    display: flex;
-    margin-top: 22px;
-    li {
-      margin-right: 15px;
-      a {
-        color: #494949;
-        transition: 0.3s all ease-in-out;
-        &:hover {
-          color: $color-orange;
-        }
-      }
-    }
-  }
-  .instagram {
-    li {
-      width: 75px;
-      margin-bottom: 7px;
-      position: relative;
-      height: 75px;
-      margin-right: 10px;
-      background-color: #000;
-      float: left;
-      transition: 0.3s all ease-in-out;
-      a {
-        img {
-          height: auto;
-          max-width: 100%;
-        }
-        i {
-          opacity: 0;
-          left: 0;
-          top: 50%;
-          right: 0;
-          opacity: 0;
-          color: #fff;
-          position: absolute;
-          text-align: center;
-          transform: translateY(-50%);
-          transition: 0.3s all ease-in-out;
-        }
-      }
-      &::before {
-        content: "";
-        top: 0;
-        opacity: 0;
-        height: 100%;
-        position: absolute;
-        background-color: #000;
-        width: 100%;
-        transition: 0.3s all ease-in-out;
-      }
-      &:hover {
-        &::before {
-          opacity: 0.7;
-        }
+    .social-links {
+      display: flex;
+      margin-top: 22px;
+      li {
+        margin-right: 15px;
         a {
-          i {
-            opacity: 0.7;
+          color: #494949;
+          transition: 0.3s all ease-in-out;
+          &:hover {
+            color: $color-orange;
           }
         }
       }
     }
+    .instagram {
+      li {
+        width: 75px;
+        margin-bottom: 7px;
+        position: relative;
+        height: 75px;
+        margin-right: 10px;
+        background-color: #000;
+        float: left;
+        transition: 0.3s all ease-in-out;
+        a {
+          img {
+            height: auto;
+            max-width: 100%;
+          }
+          i {
+            opacity: 0;
+            left: 0;
+            top: 50%;
+            right: 0;
+            opacity: 0;
+            color: #fff;
+            position: absolute;
+            text-align: center;
+            transform: translateY(-50%);
+            transition: 0.3s all ease-in-out;
+          }
+        }
+        &::before {
+          content: "";
+          top: 0;
+          opacity: 0;
+          height: 100%;
+          position: absolute;
+          background-color: #000;
+          width: 100%;
+          transition: 0.3s all ease-in-out;
+        }
+        &:hover {
+          &::before {
+            opacity: 0.7;
+          }
+          a {
+            i {
+              opacity: 0.7;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .footer-copyright {
+    padding: 25px 0px;
+    text-align: center;
+    span {
+      font-size: 15px;
+      color: #ffffff;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  #footer {
+    .footer-content {
+      .btn-usual {
+        margin-bottom: 15px;
+      }
+      form {
+        margin-top: 0;
+      }
+      .contact {
+        display: flex;
+      }
+      .open-hours {
+        p {
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
+  .pl-40 {
+    padding-left: 10px;
   }
 }
