--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -176,6 +176,7 @@
     visibility: hidden;
     left: 0;
     top: 0;
+    z-index: 99999;
     .menu-overlay {
       position: fixed;
       width: 100%;
