--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,21 @@ ul {
   outline: none;
 }
 
+.scroll-up {
+  position: fixed;
+  right: 15px;
+  bottom: 20px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  background: #e3002a;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  z-index: 20;
+  color: #ffffff;
+}
+
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
@@ -263,7 +278,7 @@ ul {
 .navigation-bar .mobile-menu {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 120vh;
   visibility: hidden;
   left: 0;
   top: 0;
@@ -273,7 +288,7 @@ ul {
 .navigation-bar .mobile-menu .menu-overlay {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.9);
   left: 0;
   top: 0;
@@ -288,7 +303,7 @@ ul {
   right: 0;
   top: 0;
   width: 301px;
-  height: 100%;
+  height: 100vh;
   background-color: #000;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
@@ -365,6 +380,20 @@ ul {
   padding: 10px 30px 10px 0;
   text-transform: capitalize;
   border-bottom: 1px solid rgba(78, 78, 78, 0.41);
+}
+
+.fixed-navigation-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 998;
+  animation-duration: 0.7s;
+  animation-fill-mode: both;
+  animation-name: fadeInDown;
+  animation-timing-function: ease;
+  transition: 0.3s all ease-in-out;
+  box-shadow: 0px 0px 18px 1px rgba(0, 0, 0, 0.11);
 }
 
 @media only screen and (max-width: 992px) {
@@ -1801,6 +1830,10 @@ ul {
   margin-right: 10px;
 }
 
+#subscribe-form .subscribe-content form input:focus {
+  outline: none;
+}
+
 #subscribe-form .subscribe-content form button.btn-usual {
   border-radius: 0;
   transition: 0.3s all ease-in-out;
@@ -1964,6 +1997,15 @@ ul {
   height: 45px;
   border: none;
   position: absolute;
+  transition: 0.3s all ease-in-out;
+}
+
+#footer .footer-content form button i {
+  transition: 0.3s all ease-in-out;
+}
+
+#footer .footer-content form button:hover i {
+  color: black;
   transition: 0.3s all ease-in-out;
 }
 
