--- a/assets/scss/_website.scss
+++ b/assets/scss/_website.scss
@@ -43,6 +43,21 @@ ul {
     }
   }
 }
+.scroll-up {
+  position: fixed;
+  right: 15px;
+  bottom: 20px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  background: #e3002a;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  z-index: 20;
+  color: #ffffff;
+}
+
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
