--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -172,7 +172,7 @@
   .mobile-menu {
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 120vh;
     visibility: hidden;
     left: 0;
     top: 0;
@@ -180,7 +180,7 @@
     .menu-overlay {
       position: fixed;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       background-color: rgba(0, 0, 0, 0.9);
       left: 0;
       top: 0;
@@ -194,7 +194,7 @@
       right: 0;
       top: 0;
       width: 301px;
-      height: 100%;
+      height: 100vh;
       background-color: #000;
       transform: translateX(100%);
       transition: all 0.5s ease-in-out;
@@ -264,6 +264,20 @@
     }
   }
 }
+.fixed-navigation-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 998;
+  animation-duration: 0.7s;
+  animation-fill-mode: both;
+  animation-name: fadeInDown;
+  animation-timing-function: ease;
+  transition: 0.3s all ease-in-out;
+  box-shadow: 0px 0px 18px 1px rgba(0, 0, 0, 0.11);
+}
+
 @media only screen and(max-width:992px) {
   .navigation-bar {
     .navbar-content {
