--- a/assets/scss/components/_subscribe-form.scss
+++ b/assets/scss/components/_subscribe-form.scss
@@ -33,8 +33,6 @@
     form {
       display: flex;
       align-items: center;
-      //   width: 100%;
-      //   justify-content: flex-end;
       input {
         height: 48px;
         width: 100%;
@@ -43,6 +41,9 @@
         padding-left: 20px;
         background-color: #292929;
         margin-right: 10px;
+        &:focus {
+          outline: none;
+        }
       }
       button.btn-usual {
         border-radius: 0;
