--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,3 +13,4 @@
 @import "components/latset-news";
 @import "components/subscribe-form";
 @import "components/footer";
+@import "components/breadcrumb-banner";
