--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ ul {
 
 .owl-carousel .owl-dots {
   text-align: center;
+  margin-top: 20px;
 }
 
 .owl-carousel .owl-dots .owl-dot.active {
@@ -2145,5 +2146,50 @@ ul {
   .pl-40 {
     padding-left: 10px;
   }
+}
+
+#breadcrumb-banner {
+  background-image: url("/assets/img/breadcrumb-banner.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  padding: 195px 0px 110px;
+  color: white;
+  position: relative;
+  z-index: 2;
+}
+
+#breadcrumb-banner::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  background-color: #030014;
+  position: absolute;
+  z-index: -1;
+}
+
+#breadcrumb-banner .breadcrumb {
+  justify-content: center;
+}
+
+#breadcrumb-banner .breadcrumb .breadcrumb-item {
+  color: #fff;
+  font-weight: 700;
+}
+
+#breadcrumb-banner .breadcrumb .breadcrumb-item a {
+  color: #fff;
+  font-weight: 700;
+}
+
+#breadcrumb-banner .breadcrumb .breadcrumb-item:last-child::before {
+  content: "";
+  font-weight: 900;
+  color: #e3002a;
+  font-family: "Font Awesome 5 Free";
 }
 /*# sourceMappingURL=style.css.map */
