--- a/assets/scss/components/_breadcrumb-banner.scss
+++ b/assets/scss/components/_breadcrumb-banner.scss
@@ -8,6 +8,13 @@
   color: white;
   position: relative;
   z-index: 2;
+  h1 {
+    color: #fff;
+    font-size: 60px;
+    font-weight: 700;
+    padding-bottom: 10px;
+    font-family: $secondary-font;
+  }
   &::before {
     content: "";
     top: 0;
