--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,3 +14,5 @@
 @import "components/subscribe-form";
 @import "components/footer";
 @import "components/breadcrumb-banner";
+@import "components/about-us";
+@import "components/about-course";
