--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,3 +16,4 @@
 @import "components/breadcrumb-banner";
 @import "components/about-us";
 @import "components/about-course";
+@import "components/filter-search";
