--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@ ul {
   color: #ffffff;
 }
 
+.bg-gray {
+  background-color: #f2f2f4 !important;
+}
+
 @media only screen and (min-width: 1400px) {
   .container {
     max-width: 1200px;
@@ -2355,5 +2359,71 @@ ul {
 
 #about-course .about-course-card:hover::before {
   width: 100%;
+}
+
+#filter-search {
+  padding: 100px 0 70px;
+  background-color: #f2f2f4;
+}
+
+#filter-search .filter {
+  background-color: white;
+  padding: 18px;
+  box-shadow: 0px 0px 35px 0px rgba(12, 12, 12, 0.048);
+  border-radius: 3px;
+}
+
+#filter-search .filter i:first-child {
+  position: relative;
+  margin-right: 30px;
+}
+
+#filter-search .filter i:first-child::after {
+  content: "";
+  width: 3px;
+  height: 20px;
+  position: absolute;
+  background-color: #d7d8da;
+  right: -17px;
+  top: -3px;
+}
+
+#filter-search .filter span {
+  margin-left: 25px;
+}
+
+#filter-search form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#filter-search form input {
+  background-color: white;
+  padding: 18px;
+  border: none;
+  width: 80%;
+  box-shadow: 0px 0px 35px 0px rgba(12, 12, 12, 0.048);
+  border-radius: 3px;
+}
+
+#filter-search form input:focus {
+  outline: none;
+}
+
+#filter-search form button.btn-usual {
+  border: none;
+  border-radius: 0;
+  height: 60px;
+  background-color: #f4511f;
+}
+
+#filter-search form button.btn-usual::after {
+  content: none;
+}
+
+#filter-search form button.btn-usual:focus {
+  outline: none;
 }
 /*# sourceMappingURL=style.css.map */
