--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1337,6 +1337,29 @@ ul {
   animation: toBottomFromTop 0.3s forwards;
 }
 
+#course .course-card.course-about .course-card-header img {
+  width: 100%;
+}
+
+#course .course-card.course-about .course-card-body .price {
+  justify-content: space-between;
+}
+
+#course .course-card.course-about .course-card-body .price .course-amount {
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+
+#course .course-card.course-about .course-card-body .course-name {
+  font-size: 22px;
+  height: 80px;
+}
+
+#course .course-card.course-about .course-card-footer {
+  justify-content: space-between;
+}
+
 #course .btn-usual {
   background-color: #0000fe;
   height: 50px;
@@ -2371,6 +2394,15 @@ ul {
   padding: 18px;
   box-shadow: 0px 0px 35px 0px rgba(12, 12, 12, 0.048);
   border-radius: 3px;
+}
+
+#filter-search .filter a {
+  color: #010101;
+  transition: all 300ms ease-in-out;
+}
+
+#filter-search .filter a:hover {
+  color: #ff5520;
 }
 
 #filter-search .filter i:first-child {
