--- a/assets/scss/components/_filter-search.scss
+++ b/assets/scss/components/_filter-search.scss
@@ -6,6 +6,13 @@
     padding: 18px;
     box-shadow: 0px 0px 35px 0px rgba(12, 12, 12, 0.048);
     border-radius: 3px;
+    a {
+      color: #010101;
+      transition: all 300ms ease-in-out;
+      &:hover {
+        color: $color-orange;
+      }
+    }
     i:first-child {
       position: relative;
       margin-right: 30px;
