--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1386,6 +1386,36 @@ ul {
   background-color: #ff5520;
 }
 
+#course .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+#course .pagination li {
+  padding: 10px 14px;
+  background-color: white;
+  transition: all 300ms ease-in-out;
+  margin-right: 13px;
+  cursor: pointer;
+}
+
+#course .pagination li a {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Fira Sans", sans-serif;
+  transition: all 300ms ease-in-out;
+}
+
+#course .pagination li:hover {
+  background-color: #0000fe;
+}
+
+#course .pagination li:hover a {
+  color: white;
+}
+
 @media only screen and (max-width: 992px) {
   #course .course-card .course-card-header img {
     width: 100%;
@@ -2435,7 +2465,7 @@ ul {
   background-color: white;
   padding: 18px;
   border: none;
-  width: 80%;
+  width: 84%;
   box-shadow: 0px 0px 35px 0px rgba(12, 12, 12, 0.048);
   border-radius: 3px;
 }
