--- a/assets/scss/components/_course.scss
+++ b/assets/scss/components/_course.scss
@@ -169,6 +169,31 @@
       background-color: $color-orange;
     }
   }
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    li {
+      padding: 10px 14px;
+      background-color: white;
+      transition: all 300ms ease-in-out;
+      margin-right: 13px;
+      cursor: pointer;
+      a {
+        color: black;
+        font-size: 18px;
+        font-weight: 700;
+        font-family: $secondary-font;
+        transition: all 300ms ease-in-out;
+      }
+      &:hover {
+        background-color: $color-blue;
+        a {
+          color: white;
+        }
+      }
+    }
+  }
 }
 
 //media
