--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ ul {
 .navigation-bar {
   background-color: white;
   display: flex;
-  padding: 1rem 15px 10px;
+  padding: 1rem 15px 0;
 }
 
 .navigation-bar .navbar-content {
@@ -114,6 +114,7 @@ ul {
   padding-top: 20px;
   margin-left: 30px;
   padding-left: 5px;
+  margin-bottom: 0;
 }
 
 .navigation-bar .navbar-content .navbar-items li {
@@ -157,6 +158,7 @@ ul {
 .navigation-bar .navbar-content .navbar-items li a {
   color: #000000;
   font-weight: 700;
+  padding-bottom: 25px;
 }
 
 .navigation-bar .navbar-content .navbar-items li a::after {
@@ -184,11 +186,11 @@ ul {
 }
 
 .navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content {
+  z-index: 3;
   position: absolute;
   top: 65px;
   left: 0;
   opacity: 0;
-  z-index: 2;
   margin: 0px;
   padding: 0px;
   height: auto;
