--- a/assets/scss/_website.scss
+++ b/assets/scss/_website.scss
@@ -62,6 +62,31 @@ $breadcrumb-divider: (">>");
 .bg-gray {
   background-color: #f2f2f4 !important;
 }
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  li {
+    padding: 10px 14px;
+    background-color: white;
+    transition: all 300ms ease-in-out;
+    margin-right: 13px;
+    cursor: pointer;
+    a {
+      color: black;
+      font-size: 18px;
+      font-weight: 700;
+      font-family: $secondary-font;
+      transition: all 300ms ease-in-out;
+    }
+    &:hover {
+      background-color: $color-blue;
+      a {
+        color: white;
+      }
+    }
+  }
+}
 
 @media only screen and (min-width: 1400px) {
   .container {
