--- a/assets/scss/components/_latset-news.scss
+++ b/assets/scss/components/_latset-news.scss
@@ -9,7 +9,8 @@
       opacity: 0.7;
     }
   }
-  .latset-news-slider {
+  .latset-news-slider,
+  .blog {
     .news-item {
       margin: 0 auto;
       max-width: 370px;
