--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,3 +17,4 @@
 @import "components/about-us";
 @import "components/about-course";
 @import "components/filter-search";
+@import "components/instructor";
